--- a/love/love.html
+++ b/love/love.html
@@ -38,7 +38,7 @@
                 <div class="handsCatImgInput">
                     <img src="../image/handsCat.png" alt="">
                 </div>
-                <input type="text" id="inputField" placeholder="Nhập tên..." readonly>
+                <input type="text" id="inputField" placeholder="" readonly>
             </div>
             <div class="buttonLove">
                 <div class="cricleBtn"></div>
@@ -171,7 +171,7 @@
     }
 
     const inputField = document.getElementById('inputField');
-    const textToType = "Em yêu An";
+    const textToType = "Gửi em yêu An";
     const typingSpeed = 100; // milliseconds per character
 
     let charIndex = 0;
